Item Simulation and Compare revamp

--- a/application/layouts/scripts/_menu.phtml
+++ b/application/layouts/scripts/_menu.phtml
@@ -25,6 +25,11 @@
 		padding-right:21px;
 		background:url("/images/down-arrow.png") no-repeat center right;
 	}
+	
+	#megamenu li.social {
+	  float: right;
+	  padding: 9px 10px;
+	}
 
 	.dropdown_1column, 
 	.dropdown_2columns, 
@@ -413,6 +418,9 @@
 						<p>All the guides on D3Up.com are created by Diablo 3 players to help share successful strategies. Feel free to create your own guide if you'd like to share something you've discovered!</p>
 					</div>
 	      </div>
+			</li>
+			<li class='social'>
+			  <a href="http://facebook.com/d3upgrade"><img src='/images/f_logo.png'/>
 			</li>
 		</ul>	
 	</div>
