--- a/application/layouts/scripts/menu/nouser.phtml
+++ b/application/layouts/scripts/menu/nouser.phtml
@@ -1,5 +1,5 @@
 <h5><a href="/build/create" class="drop">Getting Started</a></h5>
-<span>Start using the EHP/DPS Calc</span>
+<span>Start using the Calculator</span>
 <div class="dropdown_4columns">
 	<div class="col_2 col_first">
 		<h2>Ready to use the Calculator?</h2>
