--- a/application/layouts/scripts/_menu.phtml
+++ b/application/layouts/scripts/_menu.phtml
@@ -62,7 +62,7 @@
 	#megamenu li:hover .dropdown_5columns {
 		left:-2px;
 		top:auto;
-		z-index: 999;
+		z-index: 9999;
 		background: rgb(17,17,17); /* Old browsers */
 		background: -moz-linear-gradient(top, rgba(17,17,17,1) 0%, rgba(34,34,34,1) 100%); /* FF3.6+ */
 		background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(17,17,17,1)), color-stop(100%,rgba(34,34,34,1))); /* Chrome,Safari4+ */
@@ -420,7 +420,7 @@
 	      </div>
 			</li>
 			<li class='social'>
-			  <a href="http://facebook.com/d3upgrade"><img src='/images/f_logo.png'/>
+			  <a href="http://facebook.com/d3upgrade"><img src='/images/f_logo.png'/></a>
 			</li>
 		</ul>	
 	</div>
