--- a/application/views/scripts/index/_sidebar.phtml
+++ b/application/views/scripts/index/_sidebar.phtml
@@ -26,4 +26,13 @@
 			</form>
 		</div>
 	</div>
+	<div class='page'>
+		<h3>Statistics</h3>
+		<ul>
+			<li><?= $this->prettyStat($this->counts['guides'], 1) ?> <a href="/guide">Guides</a></li>
+			<li><?= $this->prettyStat($this->counts['items'], 1) ?> <a href="/items">Items</a></li>
+			<li><?= $this->prettyStat($this->counts['builds'], 1) ?> <a href="/build/">Character Builds</a></li>
+			<li><?= $this->prettyStat($this->counts['sales'], 1) ?> <a href="/item/sales-history">Sales</a></li>
+		</ul>
+  </div>
 </div>
