--- a/application/views/scripts/user/builds.phtml
+++ b/application/views/scripts/user/builds.phtml
@@ -1,103 +1,1 @@
-<h2 class="table-header">My Character Builds</h2>
-<? if($this->notLoggedIn): ?>
-	<p>This feature is only available to logged in users due to the nature of the application.</p>
-	<p>When logged in, the database will save your character builds, the gear you choose to wear, the skills you use and more. This allows you to quickly compare items against your current gear, with detailed stats about your character immediately generated allowing you to make informed decisions about gear changes without actually having to purchase the gear itself.</p>
-	<p>Interested? Feel free to wander over to the <a href="/user/register">registration page</a> to create an account, or if you already have one, you can <a href="/user/login">login</a>.</p>
-<? else: ?>
-	<? if($this->builds->count()):?>
-	<table id="all-builds" class="d3up-table">
-		<thead>
-			<tr>
-				<td colspan="10" class='sorting'>
-					<a href="/build/create" style="padding: 5px 20px" class="ui-button ui-widget ui-state-default ui-corner-all ui-button-text-only">Add Character Build</a>
-					<div style="float: right; padding: 11px">
-						Guide? 
-						<select id="hasGuide">
-							<option value="false">No</option>
-							<option value="true">Yes</option>
-						</select> 
-					</div>
-					<div style="float: right; padding: 11px">
-						Geared? 
-						<select id="isGeared">
-							<option value="false">No</option>
-							<option value="true">Yes</option>
-						</select> 
-					</div>
-					<div style="float: right; padding: 11px">
-						Class
-						<select id="classSelect">
-							<option value="">Filter by Class</option>
-							<option value="barbarian">Barbarian</option>
-							<option value="demon-hunter">Demon Hunter</option>
-							<option value="monk">Monk</option>
-							<option value="witch-doctor">Witch Doctor</option>
-							<option value="wizard">Wizard</option>
-						</select>
-					</div>
-					<script type="text/javascript">
-						<? if($this->class): ?>
-							$("#classSelect option[value=<?= $this->class ?>]").attr("selected", "selected");
-						<? endif?>
-						<? if($this->hasGuide): ?>
-							$("#hasGuide option[value=<?= ($this->hasGuide)?"true":"false" ?>]").attr("selected", "selected");
-						<? endif?>
-						<? if($this->isGeared): ?>
-							$("#isGeared option[value=<?= ($this->isGeared)?"true":"false" ?>]").attr("selected", "selected");
-						<? endif?>
-					</script>
-				</td>
-			</tr>
-		</thead>
-		<tbody>
-			<tr>
-				<td colspan="10" class="build-paginator">
-					<?php echo $this->paginationControl($this->builds,
-					                                    'Elastic',
-					                                    'build/_pages.phtml',
-																							array(
-																								'class' => $this->class,
-																								'hasGuide' => $this->hasGuide,
-																								'isGeared' => $this->isGeared,
-																							)); ?>
-				</td>
-			</tr>
-			<tr>
-				<th></th>
-				<th>Name</th>
-				<th>DPS</th>
-				<th>EHP</th>
-				<th>Geared?</th>
-				<th>Guide?</th>
-			</tr>
-		<? foreach($this->builds as $build): ?>
-			<tr class='build-row'>
-				<td class="icon"><img src="/images/<?= $build->class ?>.png"/></td>
-				<td class="name"><?= $this->mLink($build) ?></td>
-				<td class="stat"><?= $this->prettyStat($build->stats['dps']) ?></td>
-				<td class="stat"><?= $this->prettyStat($build->stats['ehp']) ?></td>
-				<td class="meta"><?= (count($build->equipment) > 10)?"<span class='pos'>Yes</span>":"<span class='neg'>No</span>" ?></td>
-				<td class="meta"><?= ($build->guideIsPublished)?"<span class='pos'>Yes</span>":"<span class='neg'>No</span>" ?></td>
-				<td class="controls"><?= $this->mLink($build, array('action' => 'delete', 'text' => 'Delete')) ?></td>
-			</tr>
-		<? endforeach; ?>
-			<tr>
-				<td colspan="10" class="build-paginator">
-					<?php echo $this->paginationControl($this->builds,
-					                                    'Elastic',
-					                                    'build/_pages.phtml',
-																							array(
-																								'class' => $this->buildClass,
-																								'hasGuide' => $this->hasGuide,
-																								'isGeared' => $this->isGeared,
-																							)); ?>
-				</td>
-			</tr>
-		</tbody>
-	</table>
-	<? else: ?>
-	<p>You don't have any characters yet!</p>
-	<p>Click the "Add Character Build" button above to get started.</p>
-	<a href="/build/create" style="padding: 5px 20px" class="ui-button ui-widget ui-state-default ui-corner-all ui-button-text-only">Add Character Build</a>
-	<? endif; ?>
-<? endif; ?>
+<?= $this->render("/build/index.phtml")?>
