--- a/application/views/scripts/user/edit.phtml
+++ b/application/views/scripts/user/edit.phtml
@@ -1,4 +1,6 @@
-<div class="ui-widget ui-corner-all ui-widget-content ui-helper-clearfix" style="padding: 0 20px">
-	<h2>Your Profile</h2>
-	<?= $this->form ?>
+<div class='content-page'>
+  <div class='form'>
+  	<h2>Your Profile</h2>
+  	<?= $this->form ?>
+  </div>
 </div>
