--- a/application/views/scripts/item/index.phtml
+++ b/application/views/scripts/item/index.phtml
@@ -192,8 +192,7 @@
 						<? endif ?>
 						<? if($profile): ?>
 						<td class='controls'>
-								<?= $this->mLink($item, array('action' => 'copy', 'text' => 'Copy'))?>
-								<a class="compareThis" data-item="<?= $item->id ?>">Compare</a>
+							<?= $this->itemLink($item, array('action' => 'copy', 'text' => 'Copy', 'button' => true))?>
 						</td>
 					<? endif ?>
 					</tr>
