--- a/application/layouts/scripts/_system-message.phtml
+++ b/application/layouts/scripts/_system-message.phtml
@@ -1,6 +1,6 @@
 <div id="sys-message">
 	<b>System Message</b>: 
-	Sept 6 - 
-	Attention Guide Creators! The skills in your guide have moved to the bottom, but you can move them wherever you want now! The interface has changed a bit too, please read the update's <a href="/update/30">patch notes</a> for all the changes.
-	Please report anything missing/wrong to <a href="mailto:aaron.cox@greymass.com">aaron.cox@greymass.com</a>!
+	Welcome to the new D3Up.com!
+	Take a moment to <a href="">read the patch</a> notes or <a href="">watch the video</a> where I show all the new toys!
+	This was an absolutely major task, so please report anything strange to <a href="mailto:aaron.cox@greymass.com">aaron.cox@greymass.com</a>!
 </div>
